--- a/package.json
+++ b/package.json
@@ -1,43 +1,86 @@
 {
-  "name": "st-react-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "st-react-app",
+    "homepage": ".",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/react": "11.1.0",
+        "@testing-library/user-event": "12.1.10",
+        "@types/axios": "0.14.0",
+        "@types/jest": "26.0.22",
+        "@types/moment": "^2.13.0",
+        "@types/node": "12.0.0",
+        "@types/react": "17.0.0",
+        "@types/react-dom": "17.0.0",
+        "@types/react-router-dom": "5.1.7",
+        "@types/styled-components": "5.1.9",
+        "axios": "0.21.1",
+        "i18next": "20.0.0",
+        "i18next-browser-languagedetector": "6.1.0",
+        "i18next-xhr-backend": "3.2.2",
+        "lodash": "4.17.21",
+        "mobx": "6.1.8",
+        "mobx-react": "7.1.0",
+        "moment": "^2.29.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-i18next": "^11.8.10",
+        "react-router-dom": "5.2.0",
+        "react-scripts": "4.0.3",
+        "styled-components": "5.2.1",
+        "ts-jest": "^26.5.4",
+        "typescript": "4.1.2",
+        "web-vitals": "1.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx --quiet",
+        "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.168",
+        "@typescript-eslint/eslint-plugin": "4.19.0",
+        "eslint": "7.23.0",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-jest": "24.3.2",
+        "eslint-plugin-json": "2.1.2",
+        "eslint-plugin-prettier": "3.3.1",
+        "eslint-plugin-react": "7.23.0",
+        "eslint-plugin-react-hooks": "4.2.0",
+        "eslint-plugin-simple-import-sort": "7.0.0",
+        "husky": "5.2.0",
+        "jest": "26.6.0",
+        "prettier": "2.2.1",
+        "prettier-eslint": "12.0.0",
+        "pretty-quick": "3.1.0",
+        "react-test-renderer": "17.0.2"
+    },
+    "husky": {
+        "hooks": {
+            "pre-push": "yarn lint",
+            "pre-commit": "pretty-quick --staged"
+        }
+    }
 }
